# beanweb

./: Cargo.toml  README.md  config.yaml
crates/beanweb-api/: Cargo.toml
crates/beanweb-api/src/: error.rs  lib.rs
crates/beanweb-api/src/routes/: mod.rs  time.rs
crates/beanweb-api/src/routes/accounts/: api.rs  mod.rs  page.rs
crates/beanweb-api/src/routes/commodities/: api.rs  mod.rs  page.rs
crates/beanweb-api/src/routes/files/: api.rs  mod.rs  page.rs
crates/beanweb-api/src/routes/reports/: api.rs  mod.rs  page.rs
crates/beanweb-api/src/routes/settings/: api.rs  mod.rs  page.rs
crates/beanweb-api/src/routes/transactions/: api.rs  mod.rs  page.rs
crates/beanweb-config/: Cargo.toml
crates/beanweb-config/src/: error.rs  lib.rs
crates/beanweb-config/templates/: default_config.yaml
crates/beanweb-core/: Cargo.toml
crates/beanweb-core/src/: error.rs  lib.rs  lib.rs.backup  models.rs  reports.rs  time.rs  types.rs
crates/beanweb-parser/: Cargo.toml
crates/beanweb-parser/src/: directives.rs  error.rs  lib.rs  parser.rs  types.rs
crates/beanweb-utils/: Cargo.toml
crates/beanweb-utils/src/: lib.rs
src/: main.rs
