[package]
name = "beanweb"
version = "0.1.0"
edition = "2021"
description = "A lightweight, high-performance Beancount web interface"

[workspace]

[[bin]]
name = "beanweb"
path = "src/main.rs"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ['macros', "tracing", "signal", "rt-multi-thread"] }
log = "0.4"
anyhow = "1"
async-trait = "0.1"
serde_yaml = "0.9"
rust_decimal = "1.34"
chrono = { version = "0.4", features = ["serde"] }

[dependencies]
beanweb-api = { path = "crates/beanweb-api" }
beanweb-core = { path = "crates/beanweb-core" }
beanweb-parser = { path = "crates/beanweb-parser" }
beanweb-config = { path = "crates/beanweb-config" }
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
