[package]
name = "beanweb-core"
version = "0.1.0"
edition = "2021"
description = "Core ledger processing and business logic"

[dependencies]
beanweb-config = { path = "../beanweb-config" }
beanweb-parser = { path = "../beanweb-parser" }
beanweb-utils = { path = "../beanweb-utils" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
