[package]
name = "beanweb-parser"
version = "0.1.0"
edition = "2021"
description = "Beancount parser implementation"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }

# Parser dependencies
regex = "1.10"
once_cell = "1.19"
rust_decimal = { workspace = true }
chrono = { workspace = true }
glob = "0.3"
